--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,6 +7,10 @@ Font-Family: 'Quattrocento', Serif;
 Font-Size: 16px;
 }
 
+h5 {
+  color: rgb(224, 127, 7);
+}
+
 #mainImage {
     width: 100%;
     margin-left: 0;
@@ -45,71 +49,43 @@ Font-Size: 16px;
 }
 
 /*Mentor Application Page*/
-#intro {
-    margin-left: 3%;
-    margin-top: 1%;
+
+form {
+  margin-top: 2%;
+  margin-left: 3%; 
 }
 
 #novalidate {
     margin-top:  1%;
     margin-left: 3%;
     font: bold;
-    color:#001365;
+    color:#000000;
 }
+
 #validationCustom01 {
     font: bold;
 }
-
-/* Dropdown Button */
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    margin-left: 15%;
-  }
-  
-  /* TIME ZONE Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
   
   /* SUBMIT Button */
   
   #submitButton {
-    margin-left: -2%;
-    font: bold;
+    margin-left: 5%;
 }
 
+/*Mentor List Page*/
+
+#mentorSelector {
+  background-color: gainsboro;
+}
+
+#selectPrimaryHelp {
+  margin-left: 1%;
+  margin-right: 1%;
+}
+
+#selectTimeZone {
+  margin-left: 1%;
+}
+#submitForMentor {
+  margin-left: 1%;
+}
