--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -36,16 +36,25 @@ h5 {
     color: azure;
     font-size: 26px;
     margin-top: 7%;
-    color: darkorange;
+    color: #cc7000;
     font: bold;
+
 }
 
 #firstButton {
-    margin: 1%;
+    margin: 10%;
+    padding: 5px;
+    width: 100px;
+    border-width: 2px;
+    border-color: white;
 }
 
 #secondButton {
-    margin: 1%;
+    margin: 10%;
+    padding: 5px;
+    width: 100px;
+    border-width: 2px;
+    border-color: white;
 }
 
 /*Mentor Application Page*/
@@ -74,6 +83,9 @@ form {
 
 /*Mentor List Page*/
 
+.mentorList {
+  width: 100%;
+}
 #mentorSelector {
   background-color: gainsboro;
 }
