--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,6 +11,10 @@ h5 {
   color: rgb(224, 127, 7);
 }
 
+#navbarText {
+  color: whitesmoke;
+}
+
 #mainImage {
     width: 100%;
     margin-left: 0;
